--- a/landing-cms.AppHost/landing-cms.AppHost.csproj
+++ b/landing-cms.AppHost/landing-cms.AppHost.csproj
@@ -1,18 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+	<Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <IsAspireHost>true</IsAspireHost>
-    <UserSecretsId>cb600094-96f6-46ef-87af-4c4230809df2</UserSecretsId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<IsAspireHost>true</IsAspireHost>
+		<UserSecretsId>cb600094-96f6-46ef-87af-4c4230809df2</UserSecretsId>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0" />
+		<PackageReference Include="Aspire.Hosting.NodeJs" Version="9.1.0" />
+		<PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.2.1" />
+		<PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.1.0" />
+		<PackageReference Include="Aspire.Hosting.Redis" Version="9.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\landing-cms.Server\landing-cms.Server.csproj" />
+	</ItemGroup>
 
 </Project>
