--- a/landing-cms.Client/package.json
+++ b/landing-cms.Client/package.json
@@ -6,7 +6,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "run-script-os",
+    "run-script-os": "run-script-os",
+    "start": "ng serve --port 4200",
     "start:win32": "ng serve --port %PORT%",
     "start:linux": "ng serve --port %PORT%",
     "start:default": "ng serve --port $PORT",
@@ -16,13 +17,17 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.4",
+    "@angular/cdk": "^19.2.9",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.9",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-web": "^0.46.0",
     "@opentelemetry/context-zone": "^2.0.0",
@@ -36,11 +41,11 @@
     "@opentelemetry/resources": "^2.0.0",
     "@opentelemetry/sdk-trace-web": "^2.0.0",
     "@opentelemetry/semantic-conventions": "^1.30.0",
+    "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.0.17",
     "jest-editor-support": "*",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.0.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
